@@ -1,10 +1,13 @@
 package com.derotyoung.service;
 
-import cn.hutool.core.thread.ThreadUtil;
+import cn.hutool.core.util.NumberUtil;
 import cn.hutool.core.util.ReUtil;
 import com.alibaba.fastjson2.JSON;
 import com.alibaba.fastjson2.JSONArray;
 import com.alibaba.fastjson2.JSONObject;
+import com.derotyoung.dto.Media;
+import com.derotyoung.dto.MediaPhoto;
+import com.derotyoung.dto.MediaVideo;
 import com.derotyoung.dto.WeiboPost;
 import com.derotyoung.entity.HistoryPost;
 import com.derotyoung.enums.MonthEnum;
@@ -12,60 +15,56 @@ import com.derotyoung.properties.WeiboSubscribeProperties;
 import com.derotyoung.repository.HistoryPostRepository;
 import com.derotyoung.repository.UserSubscribeRepository;
 import com.derotyoung.util.OkHttpClientUtil;
-import com.pengrad.telegrambot.TelegramBot;
-import com.pengrad.telegrambot.model.request.ParseMode;
-import com.pengrad.telegrambot.request.SendMessage;
-import com.pengrad.telegrambot.response.SendResponse;
+import com.derotyoung.util.PostUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 
+import javax.annotation.Resource;
 import java.io.IOException;
+import java.math.BigDecimal;
 import java.time.*;
-import java.time.format.DateTimeFormatter;
-import java.util.*;
-import java.util.regex.Pattern;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
 
 @Service
 public class SearchService {
 
     private final static Logger logger = LoggerFactory.getLogger(SearchService.class);
 
-    @Autowired
+    @Resource
     private UserSubscribeRepository userSubscribeRepository;
 
-    @Autowired
+    @Resource
     private HistoryPostRepository historyPostRepository;
 
-    @Autowired
+    @Resource
     private WeiboSubscribeProperties weiboSubscribeProperties;
 
-    @Autowired
-    private TelegramBot telegramBot;
-
-    @Autowired
-    private HistoryService historyService;
+    @Resource
+    private MessageService messageService;
 
     public void run() {
         List<String> userIds = userSubscribeRepository.getAllUserId(true);
         if (CollectionUtils.isEmpty(userIds)) {
             return;
         }
-        String url = "https://m.weibo.cn/api/container/getIndex";
+        String baseUrl = "https://m.weibo.cn/api/container/getIndex";
         List<WeiboPost> postList = new ArrayList<>();
         for (String userId : userIds) {
-            Map<String, String> paramsMap = Collections.singletonMap("containerid", "107603" + userId);
+            String url = OkHttpClientUtil.getRequestUrl(baseUrl, Map.of("containerid", ("107603" + userId)));
             String reqBody;
             try {
-                reqBody = OkHttpClientUtil.requestGet(url, paramsMap);
+                reqBody = OkHttpClientUtil.requestGetWithSleep(url);
             } catch (Exception ignored) {
-                logger.error("查询微博错误,url={}", OkHttpClientUtil.getRequestUrl(url, paramsMap));
+                logger.error("查询微博错误,url={}", url);
                 continue;
             }
-            if (!stringIsJson(reqBody)) {
+            if (strIsNotJson(reqBody)) {
                 continue;
             }
             JSONObject entries = JSON.parseObject(reqBody);
@@ -73,8 +72,8 @@ public class SearchService {
             Map<String, List<HistoryPost>> postMap = historyPostRepository.getPostMapByUserId(userId);
             JSONArray cards = data.getJSONArray("cards");
             for (int i = 0; i < cards.size(); i++) {
-                // 每3分钟执行一次，只取最新的5条博文
-                if (i > 4) {
+                // 每次只取最新的4条博文
+                if (i >= 4) {
                     break;
                 }
                 JSONObject card = cards.getJSONObject(i);
@@ -83,24 +82,11 @@ public class SearchService {
 
                 // 文章已发送不再发送
                 List<HistoryPost> historyPosts = postMap.get(id);
-                if (!CollectionUtils.isEmpty(historyPosts)) {
-                    historyPosts.sort(Comparator.comparing(HistoryPost::getId).reversed());
-                    HistoryPost lastHisPost = historyPosts.get(0);
-                    LocalDateTime createdAt = parseDate(mblog.getString("created_at"));
-                    LocalDateTime editAt = parseDate(mblog.getString("edit_at"));
-                    if (lastHisPost.getEditAt() == null) {
-                        if (editAt == null && lastHisPost.getCreatedAt().equals(createdAt)) {
-                            // String nickname = mblog.getJSONObject("user").getString("screen_name");
-                            // logger.info("@{}微博文章id={}已经推送过", nickname, id);
-                            continue;
-                        }
-                    } else {
-                        // 已编辑
-                        if (lastHisPost.getEditAt().equals(editAt)) {
-                            continue;
-                        }
-                    }
+                boolean haveSent = haveSent(mblog, historyPosts);
+                if (haveSent) {
+                    continue;
                 }
+
                 WeiboPost weiboPost = getWeiboPost(mblog);
                 if (weiboPost != null) {
                     postList.add(weiboPost);
@@ -108,89 +94,31 @@ public class SearchService {
             }
         }
         // 发送消息
-        sendMessageBatch(postList);
+        messageService.sendMessageBatch(postList);
     }
 
-    public void sendMessageBatch(List<WeiboPost> weiboPostList) {
-        String chatId = weiboSubscribeProperties.getTelegramChatId();
-
-        if (CollectionUtils.isEmpty(weiboPostList)) {
-            return;
-        }
-
-        List<WeiboPost> successList = new LinkedList<>();
-        weiboPostList.sort(Comparator.nullsLast(Comparator.comparing(WeiboPost::getCreatedAt)));
-        for (WeiboPost weiboPost : weiboPostList) {
-            StringBuilder sb = new StringBuilder();
-            sb.append("@");
-            sb.append(escapeSymbol(weiboPost.getNickname()));
-
-            LocalDateTime createdAt = weiboPost.getCreatedAt();
-            if (createdAt != null) {
-                String createdAtShow = createdAt.format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-                sb.append("\n");
-                sb.append(createdAtShow);
-            }
-
-            sb.append(" 来自 ").append(weiboPost.getSource());
-
-            LocalDateTime editAt = weiboPost.getEditAt();
-            if (editAt != null) {
-                String editAtShow = editAt.format(DateTimeFormatter.ofPattern("HH:mm:ss"));
-                sb.append(" 编辑于");
-                sb.append(editAtShow);
-            }
-
-            sb.append("\n\n");
-            sb.append(escapeSymbol(weiboPost.getText()));
-
-            if (weiboPost.getVideoUrl() != null) {
-                sb.append("\n");
-                sb.append("[").append(weiboPost.getNickname()).append("的微博视频](").append(weiboPost.getVideoUrl()).append(")");
-            }
-
-            sb.append("\n\n");
-            sb.append("[微博原文](").append(weiboPost.getLink()).append(")");
-            // 图片
-            if (!CollectionUtils.isEmpty(weiboPost.getPics())) {
-                sb.append("\n\n");
-                for (int i = 0; i < weiboPost.getPics().size(); i++) {
-                    if (i > 0) {
-                        sb.append("  ");
-                    }
-                    sb.append("[图").append(i + 1).append("](").append(weiboPost.getPics().get(i)).append(")");
-                }
-            }
-
-            String message = sb.toString();
-
-            SendMessage sendMessage = new SendMessage(chatId, message);
-            sendMessage.parseMode(ParseMode.Markdown);
-            try {
-                SendResponse response = telegramBot.execute(sendMessage);
-                if (response.isOk()) {
-                    weiboPost.setText(message);
-                    successList.add(weiboPost);
-                } else {
-                    logger.error("发送TelegramBot错误,message={}", message);
-                }
-            } catch (Exception e) {
-                logger.error("发送Telegram错误，微博文章={}", JSON.toJSONString(weiboPost));
-                return;
-            } finally {
-                ThreadUtil.safeSleep(1000);
+    public boolean haveSent(JSONObject mblog, List<HistoryPost> historyPosts) {
+        if (!CollectionUtils.isEmpty(historyPosts)) {
+            historyPosts.sort(Comparator.comparing(HistoryPost::getId).reversed());
+            HistoryPost lastHisPost = historyPosts.get(0);
+            LocalDateTime createdAt = parseDate(mblog.getString("created_at"));
+            LocalDateTime editAt = parseDate(mblog.getString("edit_at"));
+            if (lastHisPost.getEditAt() == null) {
+                return editAt == null && lastHisPost.getCreatedAt().equals(createdAt);
+            } else {
+                // 已编辑
+                return lastHisPost.getEditAt().equals(editAt);
             }
         }
-        historyService.saveHistory(successList);
+        return false;
     }
 
     public WeiboPost getWeiboPost(JSONObject mblog) {
         boolean isLongText = mblog.getBooleanValue("isLongText");
-        String bid = mblog.getString("bid");
         int topFlag = isTopPost(mblog) ? 1 : 0;
         WeiboPost weiboPost;
         if (isLongText) {
-            weiboPost = getWeiboLongText(bid);
+            weiboPost = getWeiboLongText(mblog);
         } else {
             weiboPost = parseToWeiboPost(mblog);
         }
@@ -221,184 +149,85 @@ public class SearchService {
 
         WeiboPost weiboPost = new WeiboPost();
         weiboPost.setId(id);
-        weiboPost.setText(text0);
         weiboPost.setUserId(userId);
         weiboPost.setNickname(nickname);
         weiboPost.setSource(source);
-        removeTags(weiboPost);
-        weiboPost.setLink(getPcPostUrl(userId, bid));
+        weiboPost.setLink(PostUtil.getPcPostUrl(userId, bid));
         weiboPost.setCreatedAt(parseDate(createdAt));
         weiboPost.setEditAt(parseDate(editAt));
 
         // retweet 不为空表示转发微博
         JSONObject retweet = mblog.getJSONObject("retweeted_status");
         if (retweet != null) {
-            String rawText = mblog.getString("raw_text");
-            if (StringUtils.hasText(rawText)) {
-                String appendText;
-                WeiboPost retweetPost = getWeiboPost(retweet);
-                if (retweetPost != null && StringUtils.hasText(retweetPost.getText())) {
-                    appendText = "\n\n//@" + retweetPost.getNickname() + "\n" + retweetPost.getText();
-                } else {
-                    appendText = "\n//转发原文不可见，可能无法查看或已被删除";
-                }
-                weiboPost.setText(rawText + appendText);
+            String appendText;
+            WeiboPost retweetPost = getWeiboPost(retweet);
+            if (retweetPost != null && StringUtils.hasText(retweetPost.getText())) {
+                appendText = "\n\n//@" + retweetPost.getNickname() + "\n" + retweetPost.getText();
+            } else {
+                appendText = "\n//转发原文不可见，可能无法查看或已被删除";
             }
+            String retweetText = PostUtil.beautifyRetweetText(text0);
+            weiboPost.setText(retweetText + appendText);
+        } else {
+            weiboPost.setText(PostUtil.beautifyText(text0));
         }
 
+        // 图片
         JSONArray pics = mblog.getJSONArray("pics");
-        List<String> picUrlList = new LinkedList<>();
-        if (pics != null && !pics.isEmpty()) {
+        List<Media> mediaList = new ArrayList<>();
+        if (!CollectionUtils.isEmpty(pics)) {
             for (int i = 0; i < pics.size(); i++) {
-                String picUrl = pics.getJSONObject(i).getJSONObject("large").getString("url");
-                picUrlList.add(picUrl);
+                JSONObject picJSON = pics.getJSONObject(i);
+                String thumb = picJSON.getString("url");
+                String media = picJSON.getJSONObject("large").getString("url");
+                MediaPhoto mediaPhoto = new MediaPhoto(media, thumb);
+                mediaList.add(mediaPhoto);
             }
         }
-        weiboPost.setPics(picUrlList);
 
-        // 视频链接
-        String videoUrl = null;
+        // 视频
         JSONObject pageInfo = mblog.getJSONObject("page_info");
         if (pageInfo != null) {
-            JSONObject mediaInfo = pageInfo.getJSONObject("media_info");
-            if (mediaInfo != null) {
-                videoUrl = mediaInfo.getString("stream_url_hd");
-                if (!StringUtils.hasText(videoUrl)) {
-                    videoUrl = mediaInfo.getString("stream_url");
-                }
+            JSONObject urls = pageInfo.getJSONObject("urls");
+            if (urls != null) {
+                List<String> urlList = urls.values().stream().map(Object::toString).sorted(Comparator.comparing(i -> {
+                    String template0 = ReUtil.getGroup0("&template.*?&", String.valueOf(i));
+                    String template = template0.replace("template=", "").replace("&", "");
+                    String[] xes = template.split("x");
+                    if (NumberUtil.isNumber(xes[0])) {
+                        return new BigDecimal(xes[0]);
+                    }
+                    return BigDecimal.ZERO;
+                }).reversed()).toList();
+                MediaVideo mediaVideo = new MediaVideo(urlList.get(0));
+                mediaVideo.setThumb(urlList.get(urlList.size() - 1));
+                mediaList.add(mediaVideo);
             }
         }
-        weiboPost.setVideoUrl(videoUrl);
+
+        weiboPost.setMediaList(mediaList);
 
         return weiboPost;
     }
 
-    public WeiboPost getWeiboLongText(String bid) {
+    public WeiboPost getWeiboLongText(JSONObject mblog) {
+        String bid = mblog.getString("bid");
         String url = "https://m.weibo.cn/statuses/show?id=" + bid;
         String reqBody;
         try {
-            reqBody = OkHttpClientUtil.requestGet(url);
-        } catch (Exception ignored) {
-            logger.error("无法获取微博长文,url={}", url);
+            reqBody = OkHttpClientUtil.requestGetWithSleep(url);
+        } catch (Exception e) {
+            logger.error("无法获取微博长文,url={}", url, e);
             return null;
         }
         // 无法查看的微博
-        if (!stringIsJson(reqBody)) {
-            logger.error("您所访问的内容因版权问题不适合展示,url={}", url);
+        if (strIsNotJson(reqBody)) {
+            logger.warn("您所访问的内容因版权问题不适合展示,postId={},url={}", mblog.getString("id"), url);
             return null;
         }
         JSONObject detail = JSON.parseObject(reqBody);
-        JSONObject mblog = detail.getJSONObject("data");
-        return parseToWeiboPost(mblog);
-    }
-
-    public void removeTags(WeiboPost weiboPost) {
-        String text = weiboPost.getText().replace("<br />", "\n");
-
-        List<String> strList0 = ReUtil.findAll(Pattern.compile("<a href.*?</a>",
-                Pattern.CASE_INSENSITIVE), text, 0, new ArrayList<>());
-        if (!CollectionUtils.isEmpty(strList0)) {
-            for (String str : strList0) {
-                int lio = str.lastIndexOf("@");
-                String replacement;
-                if (lio != -1) {
-                    replacement = str.substring(lio, str.length() - 4);
-                } else {
-                    // <a href='http://t.cn/A6o1Xuh0' data-hide=''><span class='url-icon'><img style='width: 1rem;height: 1rem' src='//h5.sinaimg.cn/upload/2015/09/25/3/timeline_card_small_web_default.png'></span> <span class='surl-text'>网页链接</span></a>
-                    String url = ReUtil.getGroup0("href='.*?'", str);
-                    if (StringUtils.hasLength(url)) {
-                        url = url.replace("'", "").replace("href=", "");
-                    }
-                    String str2 = ReUtil.getGroup0("<span class='surl-text'>.*?</span>", str);
-                    if (StringUtils.hasLength(str2)) {
-                        str2 = str2.replace("<span class='surl-text'>", "").replace("</span>", "");
-                    }
-                    replacement = "";
-                    if (StringUtils.hasLength(url) && StringUtils.hasLength(str2)) {
-                        replacement = "[" + str2 + "](" + url + ")";
-                    }
-                }
-
-                text = text.replace(str, replacement);
-            }
-        }
-
-        List<String> strList = ReUtil.findAll(Pattern.compile("<a  href.*?</a>",
-                Pattern.CASE_INSENSITIVE), text, 0, new ArrayList<>());
-        if (!CollectionUtils.isEmpty(strList)) {
-            for (String str : strList) {
-                String group0 = ReUtil.getGroup0("href=\".*?\"", str);
-                String link = group0.replace("href=", "").replace("\"", "");
-                String replacement = "";
-                String name = ReUtil.getGroup0("#+[\\u4e00-\\u9fa5]+#", str);
-                if (StringUtils.hasLength(name) && StringUtils.hasLength(link)) {
-                    replacement = "[" + name + "](" + link + ")";
-                }
-                text = text.replace(str, replacement + " ");
-            }
-        }
-
-        List<String> str2List = ReUtil.findAll(Pattern.compile("<span.*?</span>",
-                Pattern.CASE_INSENSITIVE), text, 0, new ArrayList<>());
-        if (!CollectionUtils.isEmpty(str2List)) {
-            for (String str : str2List) {
-                String emojiText = ReUtil.getGroup0("\\[+[\\u4e00-\\u9fa5]+\\]", str);
-                if (StringUtils.hasLength(emojiText)) {
-                    text = text.replace(str, ("\\" + emojiText));
-                    continue;
-                }
-
-                text = text.replace(str, "");
-            }
-        }
-
-        weiboPost.setText(text);
-    }
-
-    /**
-     * 转义特殊字符
-     *
-     * @param str String
-     * @return String
-     */
-    public String escapeSymbol(String str) {
-        if (str == null) {
-            return null;
-        }
-        return str.replace("_", "\\_")
-                .replace("&gt;", ">");
-    }
-
-    public String getRetweetText(String text) {
-        Set<String> strList = ReUtil.findAll(Pattern.compile("<a href.*?</a>",
-                Pattern.CASE_INSENSITIVE), text, 0, new HashSet<>());
-        if (!CollectionUtils.isEmpty(strList)) {
-            for (String str : strList) {
-                int lio = str.lastIndexOf("@");
-                String substring = str.substring(lio, str.length() - 4);
-                text = text.replace(str, substring);
-            }
-        }
-
-        Set<String> strList2 = ReUtil.findAll(Pattern.compile("<span class.*?</span>",
-                Pattern.CASE_INSENSITIVE), text, 0, new HashSet<>());
-        if (!CollectionUtils.isEmpty(strList2)) {
-            for (String str : strList2) {
-                String replacement = "";
-                List<String> list = ReUtil.findAllGroup0("[\\u4e00-\\u9fa5]", str);
-                if (!CollectionUtils.isEmpty(list)) {
-                    String join = String.join("", list);
-                    replacement = "[" + join + "]";
-                }
-                text = text.replace(str, replacement);
-            }
-        }
-
-        return text;
-    }
-
-    private String getPcPostUrl(String userId, String bid) {
-        return "https://weibo.com/" + userId + "/" + bid;
+        JSONObject mblog2 = detail.getJSONObject("data");
+        return parseToWeiboPost(mblog2);
     }
 
     public void testWeiboUserId() {
@@ -406,16 +235,17 @@ public class SearchService {
         if (CollectionUtils.isEmpty(userIds)) {
             return;
         }
-        String url = "https://m.weibo.cn/api/container/getIndex";
+        String baseUrl = "https://m.weibo.cn/api/container/getIndex";
         for (String userId : userIds) {
-            Map<String, String> paramsMap = Collections.singletonMap("containerid", "100505" + userId);
+            Map<String, String> paramsMap = Map.of("containerid", "100505" + userId);
+            String url = OkHttpClientUtil.getRequestUrl(baseUrl, paramsMap);
             String reqBody;
             try {
-                reqBody = OkHttpClientUtil.requestGet(url, paramsMap);
+                reqBody = OkHttpClientUtil.requestGetWithSleep(url);
             } catch (Exception ignored) {
                 continue;
             }
-            if (!stringIsJson(reqBody)) {
+            if (strIsNotJson(reqBody)) {
                 continue;
             }
             JSONObject result = JSON.parseObject(reqBody);
@@ -474,11 +304,15 @@ public class SearchService {
         return null;
     }
 
-    private boolean stringIsJson(String str) {
+    public boolean strIsJson(String str) {
         if (StringUtils.hasLength(str)) {
             return str.startsWith("{") || str.startsWith("[");
         }
         return false;
+    }
+
+    private boolean strIsNotJson(String str) {
+        return !strIsJson(str);
     }
 }
 
